# kolco24

./: .env.example  .gitignore  .isort.cfg  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  api.http  docker-compose-dbs.yml  docker-compose.yml  docker-compose_v2.yml  dues_demo.html  manage.py  pyproject.toml  requirements-linters.txt  requirements.txt  setup.cfg
.github/workflows/: lint.yml  tests.yml
deploy/: kolco24.env.example  nginx.conf
docs/: mobile-admin-auth-and-tags.md
docs/plans/: 2024-04-23-sort-by-current-period.md  2026-05-28-login-redesign.md  2026-05-29-teams-list-redesign.md  20260521-race-slug-urls.md  20260522-race-post-form-and-admins.md  20260525-demo-app.md  20260527-registration-agreements.md  20260527-registration-redesign.md  20260527-remove-agree-news.md  20260528-login-redesign.md  20260528-race-page-redesign.md  20260528-remove-magic-link-login.md  20260529-race-admin-edit-page.md  20260529-teams-list-redesign.md  20260530-team-register-redesign.md  20260531-people-limits.md  20260531-remove-is-reg-open.md  20260531-vtb-race-order-id-ulid.md  20260601-add-team-passwordless-entry.md  20260601-apps-accounts-passwordless.md  20260601-team-extras.md  20260602-remove-manual-payment-stack.md  20260602-remove-team-endpoint.md  20260603-remove-transfer-breakfast.md  20260604-custom-error-pages.md  20260604-remove-teams-endpoint.md  20260607-mobile-app-signed-endpoints.md  20260607-mobile-races-list-endpoint.md  20260607-mobile-sync-teams.md  (+18 more)
http/: api.http  http-client.env.json
kolco24/: requirements.txt
src/: conftest.py  manage.py
(+420 files in other folders)
