[project]
name = "kolco24"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Django==4.2.30",
    "python-dotenv>=1.0.0",
    "djangorestframework==3.15.2",
    "django-mailer>=2.3.2",
    "psycopg2-binary==2.9.11",
    "Pillow>=10.0.0",
    "openpyxl~=3.1.1",
    "crypto~=1.4.1",
    "cryptography>=42.0",
    "gunicorn==22.0.0",
    "whitenoise==6.6.0",
    "markdown==3.8.1",
    "nh3>=0.2.14",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-django==4.8.0",
    "black==26.3.1",
    "flake8==7.1.0",
    "isort==5.13.2",
    "seed-isort-config~=2.2.0",
    "ruff==0.6.4",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = "tests.py test_*.py"
pythonpath = ["src"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src"]
